[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrag-test"
version = "0.0.0"
description = "Minimal project to declare lightrag-hku[api] dependency"
requires-python = ">=3.11,<3.14"
dependencies = [
  "lightrag-hku[api]==1.4.9.3",
  "streamlit==1.50.0"
]

[project.optional-dependencies]
dev = [
  "black>=25.9.0",
  "isort>=7.0.0",
  "flake8>=7.3.0",
  "pylint>=4.0.1",
  "autoflake>=2.3.1",
  "pre-commit>=4.3.0",
]

[tool.flake8]
exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  ".git",
  "__pycache__",
  "*.pyc",
]
max-line-length = 88

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true

[tool.autoflake]
in_place = true
remove_all_unused_imports = true
remove_unused_variables = true

[tool.pylint.MASTER]
ignore = [
  ".venv",
  "venv",
  "build",
  "dist",
  ".git",
]
